--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/content": "^4.5.7",
+    "@fontsource/montserrat": "^4.5.14",
+    "axios": "^1.3.5",
+    "bootstrap": "^5.2.3",
     "vue": "^3.2.47"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
+    "sass": "^1.62.0",
     "vite": "^4.2.0"
   }
 }
